// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiAnyTransaction shows bank transactions 1`] = `
<div
  class="li-tx"
>
  <div
    class="li-tx__icon"
  >
    <img
      src="~assets/images/cosmos-logo.png"
      style="border-color: #25293f;"
    />
  </div>
   
  <div
    class="li-tx__content"
  >
    <div
      class="li-tx__content__left"
    >
      <div
        class="li-tx__content__caption"
      >
        <p
          class="li-tx__content__caption__title"
        >
          <div>
            
      Sent 
            <b>
              1234
            </b>
            <span>
               JBCOINS
            </span>
          </div>
        </p>
      </div>
       
      <div
        class="li-tx__content__information"
      >
        <span>
          
        To B
      
        </span>
      </div>
    </div>
     
    <div
      class="li-tx__content__block"
    >
      <router-link-stub
        to="[object Object]"
      >
        
        Block #3436 
      
      </router-link-stub>
      @ 00:00:02
    
    </div>
  </div>
</div>
`;

exports[`LiAnyTransaction shows stake transactions 1`] = `
<div
  class="li-tx"
>
  <div
    class="li-tx__icon"
  >
    <img
      src="~assets/images/cosmos-logo.png"
      style="border-color: #512584;"
    />
  </div>
   
  <div
    class="li-tx__content"
  >
    <div
      class="li-tx__content__left"
    >
      <div
        class="li-tx__content__caption"
      >
        <p
          class="li-tx__content__caption__title"
        >
          <div>
            
      Delegated 
            <b>
              4,200.00
            </b>
            <span>
               atoms
            </span>
          </div>
        </p>
      </div>
       
      <div
        class="li-tx__content__information"
      >
        <div>
          
      To 
          <router-link-stub
            to="/validators/cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          >
            
        mr_mounty
      
          </router-link-stub>
        </div>
      </div>
    </div>
     
    <div
      class="li-tx__content__block"
    >
      <router-link-stub
        to="[object Object]"
      >
        
        Block #568 
      
      </router-link-stub>
      @ 00:00:42
    
    </div>
  </div>
</div>
`;

exports[`LiAnyTransaction shows unknown transactions 1`] = `
<div
  class="li-tx"
>
  <div
    class="li-tx__icon"
  >
    <img
      src="~assets/images/cosmos-logo.png"
      style="border-color: #25293f;"
    />
  </div>
   
  <div
    class="li-tx__content"
  >
    <div
      class="li-tx__content__left"
    >
      <div
        class="li-tx__content__caption"
      >
        <p
          class="li-tx__content__caption__title"
        >
          <div>
            
      Sent 
            <b>
              1234
            </b>
            <span>
               JBCOINS
            </span>
          </div>
        </p>
      </div>
       
      <div
        class="li-tx__content__information"
      >
        <span>
          
        To B
      
        </span>
      </div>
    </div>
     
    <div
      class="li-tx__content__block"
    >
      <router-link-stub
        to="[object Object]"
      >
        
        Block #3436 
      
      </router-link-stub>
      @ 00:00:02
    
    </div>
  </div>
</div>
`;
